--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "mongoose": "^8.18.0",
     "next": "15.5.0",
     "next-auth": "^4.24.11",
+    "prettier": "^3.6.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "resend": "^6.0.1",
