--- a/package.json
+++ b/package.json
@@ -11,8 +11,13 @@
   "dependencies": {
     "@ai-sdk/langchain": "^1.0.24",
     "@ai-sdk/openai": "^2.0.21",
+    "@hookform/resolvers": "^5.2.1",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-toast": "^1.2.15",
     "@react-email/components": "^0.5.1",
     "ai": "^5.0.24",
+    "axios": "^1.11.0",
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -20,13 +25,17 @@
     "mongoose": "^8.18.0",
     "next": "15.5.0",
     "next-auth": "^4.24.11",
+    "next-themes": "^0.4.6",
     "openai": "^5.15.0",
     "prettier": "^3.6.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-hook-form": "^7.62.0",
     "resend": "^6.0.1",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
-    "zod": "^4.1.0"
+    "usehooks-ts": "^3.1.1",
+    "zod": "^3.25.76"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
