--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "@ai-sdk/langchain": "^1.0.24",
     "@ai-sdk/openai": "^2.0.21",
     "@hookform/resolvers": "^5.2.1",
+    "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-switch": "^1.2.6",
     "@radix-ui/react-toast": "^1.2.15",
     "@react-email/components": "^0.5.1",
     "ai": "^5.0.24",
